changed subscription at bottom to contact

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -53,7 +53,7 @@
   translation: Tags
 
 - id: subscribe_newsletter
-  translation: Subscribe <br> to our newsletter
+  translation: Want to Learn More?
 
 - id: subscribe_now
-  translation: Subscribe Now
+  translation: Contact Us
